samples/_failures_safe/1761508429_22d030_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d05f1809.c: In function ‘main’:
./samples/SAFE/__tmp_d05f1809.c:138:9: error: ‘f’ undeclared (first use in this function)
  138 |     if (f
      |         ^
./samples/SAFE/__tmp_d05f1809.c:138:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d05f1809.c:138:10: error: expected ‘)’ at end of input
  138 |     if (f
      |        ~ ^
      |          )
./samples/SAFE/__tmp_d05f1809.c:138:5: error: expected declaration or statement at end of input
  138 |     if (f
      |     ^~
